--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,9 +2,9 @@ Package: mypkg
 Title: This package is an API wrapper for the Lufthansa Open API
 Version: 0.0.0.9000
 Authors@R: c(
-    person("Elizaveta", "Volkova", role = c("aut")),
-    person("Sharukh", "Alvi", role = c("aut", "trl", "cre")),
-    person("Jay", "Cho")
+    person(given="Elizaveta",family= "Volkova", role = c("aut")),
+    person(given="Sharukh", family="Alvi", role = c("aut", "trl", "cre")),
+    person(given="Jay", family="Cho",role = c("aut"))
     )
 
 Description: API wrapper for the Lufthansa Open API that allows user to select and download as csv file the availability of lounges in selected airport and also see the location of the airport on the map.
