--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,11 @@ language: r
 sudo: false
 cache: packages
 warnings_are_errors: false
+Depends:
+    httr,
+    jsonlite,
+    anytime
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
