--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,8 @@ Version: 0.0.0.9000
 Authors@R: c(
     person(given="Elizaveta",family= "Volkova", role = c("aut")),
     person(given="Sharukh", family="Alvi", role = c("aut", "trl", "cre")),
-    person(given="Jay", family="Cho",role = c("aut"))
-    )
-
+    person(given="Jay", family="Cho",role = c("aut")))
 Description: API wrapper for the Lufthansa Open API that allows user to select and download as csv file the availability of lounges in selected airport and also see the location of the airport on the map.
-
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -28,4 +25,7 @@ Imports:
     MUCflights,
     devtools
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
